2005-04-08  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkimage.c (gtk_image_expose, gtk_image_calc_size): 
	If a stock_id is unknown, display the missing image. (#169870,
	Steven Walter)

	* gtk/gtkiconcache.c (icon_name_hash): Use the same function 
	as in updateiconcache.c.  (spotted by Morten Welinder)

2005-04-08  Carl Worth  <cworth@cworth.org>

	* gdk/gdkpango.c: (emboss_context): Simplify matrix manipulation
	now that cairo exposes the cairo_matrix_t structure.
	
	* gdk/gdkpixbuf-render.c: (gdk_pixbuf_set_as_cairo_source): Track
	cairo API change in signedness of data argument.

2005-04-08  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkcombobox.c (gtk_combo_box_popdown): Make this
	work when called from gtk_combo_box_destroy().  (#172999,
	Christian Persch)

2005-04-08  Matthias Clasen  <mclasen@redhat.com>

	Fix double-click to autosize treeview columns. This was
	probably broken since 2.2 ! (#169675)
	
	* gtk/gtktreeview.c (gtk_tree_view_button_press): Leave the
	"user-resized" state of the column on a double-click to
	autosize.
	(gtk_tree_view_button_press, gtk_tree_view_motion_resize_column): 
	Enter the "user-resized" state of the column only if a drag
	actually changes the column width, not on any click.

2005-04-07  Matthias Clasen  <mclasen@redhat.com>

	* gtk/gtkmenu.c (gtk_menu_paint): Allow setting background
	images on menus.  (#169532, Benjamin Otte)
	
	* gtk/updateiconcache.c (write_card16, write_card32): Avoid
	unaligned access.  (#172947)

	* gtk/gtkfilechooserdefault.c (file_list_build_popup_menu): 
	Consistently use the term "Bookmarks" in the UI.  (#166906,
	Sebastian Bacher)

	Some fixes from Morten Welinder (#172947):
	
	* gtk/updateiconcache.c (icon_name_hash): Make this compiler- 
	and platform-independent.
	(is_cache_up_to_date): Don't compare mtimes is a stat call failed.
	(build_cache): Error out if a stat fails.  

2005-04-07  Matthias Clasen  <mclasen@redhat.com>
