@@ -1,3 +1,8 @@
+2005-04-09  Matthias Clasen  <mclasen@redhat.com>
+
+	* io-bmp.c (gdk_pixbuf__bmp_image_save_to_callback): 
+	Don't overflow the stack.  (Jakub Jelinek, Arjan van de Ven)
+
 2005-04-08  Matthias Clasen  <mclasen@redhat.com>
 
 	* io-pcx.c: No debugging output, please. (#173107,
